@@ -1,6 +1,6 @@
 use warnings;
 use strict;
-use Test::More tests => 179;
+use Test::More tests => 184;
 use DBIx::Perlish qw/:all/;
 use t::test_utils;
 
@@ -265,6 +265,18 @@ test_update_sql {
 
 	tab->id = sql "some_seq.nextval";
 } "verbatim in update",
+"update tab set id = some_seq.nextval where state = ?",
+['new'];
+test_select_sql {
+	tab->id == `some_seq.nextval`;
+} "verbatim `` in select",
+"select * from tab t01 where t01.id = some_seq.nextval",
+[];
+test_update_sql {
+	tab->state eq "new";
+
+	tab->id = `some_seq.nextval`;
+} "verbatim `` in update",
 "update tab set id = some_seq.nextval where state = ?",
 ['new'];
 
